syncthing/templates/namespace.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace
  labels: #@ labels("ns")
