syncthing/templates/deployment.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: #@ data.values.app
  namespace: #@ data.values.namespace
  labels: #@ labels("deployment")
spec:
  serviceName: #@ data.values.app + "-headless"
  selector:
    matchLabels: #@ labels("server")
  replicas: 1
  template:
    metadata:
      labels: #@ labels("server")
    spec:
      serviceAccountName: #@ data.values.app
      securityContext:
        runAsUser: 2007
        runAsGroup: 2007
        fsGroup: 2007
      #! fucking busybox "cp" does not have a -n flag, and -u does not seem to work! :(
      # initContainers:
      # - name: bootstrap
      #   image: #@ data.values.busybox.image
      #   command: ["sh", "-c", "mkdir -p /var/syncthing/config; cp -u /var/syncthing/bootstrap/config.xml /var/syncthing/config/config.xml; chown -R 2007:2007 /var/syncthing || true"]
      #   securityContext:
      #     runAsUser: 0
      #   volumeMounts:
      #   - name: storage
      #     mountPath: /var/syncthing
      #   - name: #@ data.values.app + "-config"
      #     mountPath: /var/syncthing/bootstrap/config.xml
      #     subPath: config.xml
      containers:
      - name: syncthing
        image: #@ data.values.syncthing.image
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8384
        - containerPort: 22000
        command: ["/bin/entrypoint.sh"]
        args: ["/bin/syncthing", "-config", "/var/syncthing/config", "-data", "/var/syncthing/data"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "350m"
        readinessProbe:
          httpGet:
            path: /
            port: 8384
          failureThreshold: 5
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8384
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /var/syncthing
      volumes:
      - name: #@ data.values.app + "-config"
        secret:
          secretName: #@ data.values.app
          defaultMode: 432
  volumeClaimTemplates:
  - metadata:
      name: storage
      annotations: {}
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
